--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,15 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "es6",
+    "noImplicitAny": true,
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "sourceMap": true,
-    "outDir": "api",
-    "rootDir": "src"
+    "outDir": "dist",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*"]
+    }
   },
-  "lib": ["es2016"]
+  "include": ["src/**/*"]
 }
