--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,14 @@
     "esModuleInterop": true,
     "target": "es6",
     "noImplicitAny": true,
-    "moduleResolution": "node",
     "resolveJsonModule": true,
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*"]
+      "*": ["node_modules/*"],
+      "routes/*": ["src/routes/*"]
     }
   },
-  "include": ["src/**/*"]
+  "include": ["routes/**/*", "api/**/*"]
 }
