--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "vercel dev"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "puppeteer": "^13.0.1"
+    "puppeteer": "^13.0.1",
+    "vercel": "^23.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
