--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "add": "^2.0.6",
+    "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "npm": "^8.3.0",
     "puppeteer": "^13.0.1",
     "vercel": "^23.1.2"
   },
