--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "baseUrl": ".",
     "paths": {
       "*": ["node_modules/*"],
-      "routes/*": ["src/routes/*"]
+      "src/*": ["src/*"]
     }
   },
   "include": ["routes/**/*", "api/**/*"]
